--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,7 @@
 body
 {
     background: #1e1f24;
-    color: #336;
+    color: rgb(10, 10, 120);
     text-align: center;
     font-family: Arial;
     font-size: 16px;
